unpackaged/main/default/objects/pse__Utilization_Run_Batch__c/pse__Utilization_Run_Batch__c.object-meta.xml
<CustomObject>
    <description>Stores the status and details of utilization run batch jobs.</description>
    <label>Utilization Run Batch</label>
    <nameField>
        <displayFormat>URB-{000000}</displayFormat>
        <label>Utilization Run Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Run Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>