unpackaged/main/default/objects/pse__Utilization_Run_Batch__c/fields/pse__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Apex_Job_Id__c</fullName>
    <description>The ID for the Apex job executing the process.</description>
    <inlineHelpText>The ID for the Apex job executing the process.</inlineHelpText>
    <label>Apex Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>