unpackaged/main/default/objects/pse__Utilization_Run_Batch__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The current status of the batch job.</description>
    <inlineHelpText>The current status of the batch job.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing Timecards (1 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Timecards (2 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Timecards (3 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Timecards (1 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Timecards (2 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Assignments (1 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Assignments (2 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Assignments (3 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Assignments (1 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Assignments (2 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Held Resource Requests (1 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Held Resource Requests (2 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Held Resource Requests (3 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Held Resource Requests (1 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Held Resource Requests (2 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Work Calendars (1 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Work Calendars (2 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Work Calendars (3 of 3)</fullName>
            </value>
            <value>
                <fullName>Processing Work Calendars (1 of 2)</fullName>
            </value>
            <value>
                <fullName>Processing Work Calendars (2 of 2)</fullName>
            </value>
            <value>
                <fullName>Generating Utilization Results (1 of 3)</fullName>
            </value>
            <value>
                <fullName>Generating Utilization Results (2 of 3)</fullName>
            </value>
            <value>
                <fullName>Generating Utilization Results (3 of 3)</fullName>
            </value>
            <value>
                <fullName>Generating Utilization Results (1 of 2)</fullName>
            </value>
            <value>
                <fullName>Generating Utilization Results (2 of 2)</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>