unpackaged/main/default/objects/pse__Utilization_Run_Batch__c/fields/pse__Utilization_Run__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the utilization run this utilization run batch relates to.</description>
    <inlineHelpText>Lookup to the utilization run this utilization run batch relates to.</inlineHelpText>
    <label>Utilization Run</label>
    <referenceTo>pse__Utilization_Run__c</referenceTo>
    <relationshipLabel>Utilization Run Batches</relationshipLabel>
    <relationshipName>Utilization_Run_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>